# Commander

./: .dockerignore  .gitattributes  .gitignore  .tmux-project  .travis.yml  CLAUDE.md  Dockerfile  GITPOD.md  HOWTO.md  KEEPER_DRIVE_COMMANDS.md  LICENSE  LLM_SCAFFOLD_AND_PR1979_RECONCILIATION.md  MANIFEST.in  MCP_README.md  MODIFIED.md  Makefile  NESTED_SHARE_FOLDER_COMMANDS.md  PAM_WORKFLOW_DOCUMENTATION.md  PR_DRAFT_keeper-migrate-absorption.md  Passwords.kdbx  README.md  RECORD_ADD_DOCUMENTATION.md  SLACK_INTEGRATION_PLAN.md  SLACK_INTEGRATION_REQUIREMENTS.md  TODO.md  WORKFLOW_BRANCH_REVIEW_T0.md  batch.txt  cloud9_setup.sh  commander.sh  config.json.sample  demodata.txt  desired-pylint-warnings  docker-entrypoint.sh  docker_ksm_utility.py  domain-management-commands.md  eeee.kdbx  extra_dependencies.txt  keepass.key  keeper-win-file.spec  keeper-win-installer.aip  (+17 more)
.context/: index.md
.github/workflows/: build-wheel.yml  codeql-analysis.yml  sbom.yml  test-with-pytest.yml
docs/: aws-secrets-import.md  azure-secrets-import.md  cyberark-pam-import.md  gcp-secrets-import.md  pam-cnapp.md
dotnet-keeper-sdk/: .gitignore  KeeperSdk.sln  README.md
dotnet-keeper-sdk/Commander/: Commander.csproj  Commands.cs  ConnectedCommands.cs  Program.cs  (+2 more)
example/: list_all_uid.py  remove_sn_url.py
examples/: add_record_to_shared_folder.py  add_user_to_shared_folder.py  audit_events_for_shared_folder.py  complete_user_report.py  convert_general_to_typed.py  create_delete.py  create_mc.py  create_team.py  custom_login_ui.py  device_approve.py  get.py  get_audit_log.py  lastpass_membership.py  one_time_share.py  outlook_contacts.py  pam_import_generator.py  pam_import_generator_v1.py  pam_import_generator_v2.py  search.py  send_breachwatch_reminder.py  share all share-folders.py  share_all_share-folders.py  shared_folder.py  thycotic_archive.py  thycotic_import.py  thycotic_records.py  update_password.py  user_create.py  user_onboarding.py  user_onboarding__create_and_login.py  user_onboarding__create_and_push.py  vault.py
keeper/: README.md  __init__.py  api.py  cli.py  display.py  error.py  generator.py  keeper  keeper.cmd  plugin_manager.py  requirements.txt
keepercommander/: APIRequest_pb2.py  AccountSummary_pb2.py  README.md  __init__.py  __main__.py  api.py  attachment.py  autocomplete.py  base32hex.py  breachwatch.py  cli.py  command_categories.py  commands.py  constants.py  convert_keys.py  crypto.py  crypto.pyi  display.py  email_service.py  enforcement.py  enterprise.py  error.py  folder_pb2.py  generator.py  imp_exp.py  keeper_drive.py  keeper_drive_records.py  keeper_drive_sync.py  loginv3.py  native.py  oauth_helpers.py  pager.py  params.py  plugin_manager.py  record.py  record_facades.py  record_facades.pyi  record_management.py  record_pb2.py  record_types.py  (+15 more)
libs/: discovery_common-1.0.0-py3-none-any.whl  discovery_common-1.0.10-py3-none-any.whl  discovery_common-1.0.14-py3-none-any.whl  discovery_common-1.0.16-py3-none-any.whl  discovery_common-1.0.17-py3-none-any.whl  discovery_common-1.0.18-py3-none-any.whl  discovery_common-1.0.19-py3-none-any.whl  discovery_common-1.0.21-py3-none-any.whl  discovery_common-1.0.22-py3-none-any.whl  discovery_common-1.0.23-py3-none-any.whl  discovery_common-1.0.24-py3-none-any.whl  discovery_common-1.0.25-py3-none-any.whl  discovery_common-1.0.26-py3-none-any.whl  discovery_common-1.0.4-py3-none-any.whl  keeper_dag-1.0.0-py3-none-any.whl  keeper_dag-1.0.10-py3-none-any.whl  keeper_dag-1.0.13-py3-none-any.whl  keeper_dag-1.0.15-py3-none-any.whl  keeper_dag-1.0.16-py3-none-any.whl  keeper_dag-1.0.17-py3-none-any.whl  keeper_dag-1.0.18-py3-none-any.whl  keeper_dag-1.0.19-py3-none-any.whl  keeper_dag-1.0.20-py3-none-any.whl  keeper_dag-1.0.6-py3-none-any.whl
perl/: keeper.pl
python/: .gitignore  README.md  adpasswd.py  api.py  config.json.sample  display.py  generator.py  importdir.py  keeper  keeper.py  keeperapi.py  keepererror.py  keeperparams.py  ldaplib.py  params.py  record.py
sample_data/: import.csv  import.json.txt  import_records_existing_folders.json.txt  import_records_into_folders.json.txt  import_shared_folders.json.txt  import_shared_folders_and_records.json.txt
src/: .gitignore  README.md  api.py  display.py  generator.py  keeper.py  params.py  plugin_manager.py
tests/: .gitignore  binding_token_enc_test.py  compliance_test.batch  compliance_test.env.example  compliance_test.sh  config.json.sample  data_config.py  test_cli.py  test_commands.py  test_credential_provision.py  test_credential_provision_dryrun.py  test_credential_provision_execute.py  test_credential_provision_kc1035.py  test_credential_provision_validation.py  test_cross_commands.py  test_cyberark_pam_import.py  test_dag_integration.py  test_desktop_lifecycle.py  test_enterprise_commands.py  test_enterprise_role_team_validation.py  test_imp_exp.py  test_imports.py  test_kc1163_record_field_labels.py  test_pam_idp.py  test_pam_privileged_cloud.py  test_pam_recording_commands.py  test_pam_workflow.py  test_record.py  test_scim.py  test_security_audit_refresh.py  test_tunnel_close_leak.py  test_vault_commands.py
unit-tests/: .gitignore  conftest.py  data_enterprise.py  data_vault.py  helper.py  test_api.py  test_autocomplete.py  test_cli.py  test_cloud_import.py  test_command_device_management.py  test_command_enterprise.py  test_command_enterprise_api_keys.py  test_command_folder.py  test_command_ksm.py  test_command_migrate.py  test_command_record.py  test_command_register.py  test_command_risk_management.py  test_command_utils.py  test_connect_security.py  test_credential_provision.py  test_crypto.py  test_desktop_bridge_login.py  test_email_service.py  test_importer.py  test_keeper_dag_local_perms.py  test_keeper_drive.py  test_login.py  test_mcp.py  test_mcp_live.py  test_mcp_tools.py  test_nested_share_folder.py  test_nsf_acl_cache.py  test_nsf_folder_key_decrypt.py  test_pam_base_error_handling.py  test_pam_import_hardening.py  test_params_pickling.py  test_passphrase_enforcement.py  test_passphrase_generator.py  test_password_generator.py  (+10 more)
(+1034 files in other folders)
