[metadata]
name = keepercommander
version = attr: keepercommander.__init__.__version__
description = Keeper Commander for Python 3
long_description = file: README.md
long_description_content_type = text/markdown
author = Craig Lurey
author_email = craig@keepersecurity.com
url = https://keepersecurity.com/
source_url = https://github.com/Keeper-Security/Commander
download_url = https://github.com/Keeper-Security/Commander/releases
license = MIT
classifiers =
    Environment :: Console
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Topic :: Security
keywords = security, password

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
install_requires =
    asciitree
    bcrypt
    colorama
    cryptography>=41.0.0
    fido2>=2.0.0; python_version>='3.10'
    flask; python_version>='3.8'
    flask-limiter; python_version>='3.8'
    keeper-secrets-manager-core>=16.6.0
    prompt_toolkit
    protobuf>=4.23.0
    psutil; python_version>='3.8'
    pycryptodomex>=3.20.0
    pyngrok; python_version>='3.8'
    pyperclip
    python-dotenv
    requests>=2.31.0
    tabulate
    websockets
    keeper_pam_webrtc_rs>=2.0.1; python_version>='3.8'
    pydantic>=2.6.4; python_version>='3.8'
    fpdf2>=2.8.3
    cbor2; sys_platform == "darwin" and python_version>='3.10'
    pyobjc-framework-LocalAuthentication; sys_platform == "darwin" and python_version>='3.10'
    winrt-runtime; sys_platform == "win32" and python_version>='3.10'
    winrt-Windows.Foundation; sys_platform == "win32" and python_version>='3.10'
    winrt-Windows.Security.Credentials.UI; sys_platform == "win32" and python_version>='3.10'
    keeper-mlkem; python_version>='3.11'
    textual; python_version>='3.9'

[options.package_data]
keepercommander = resources/*, resources/email_templates/*

[options.extras_require]
test =
    pytest
    testfixtures
email-sendgrid =
    sendgrid>=6.10.0
email-ses =
    boto3>=1.26.0
email-gmail-oauth =
    google-auth>=2.16.0
    google-auth-oauthlib>=0.8.0
    google-auth-httplib2>=0.1.0
    google-api-python-client>=2.70.0
email-microsoft-oauth =
    msal>=1.20.0
email =
    sendgrid>=6.10.0
    boto3>=1.26.0
    google-auth>=2.16.0
    google-auth-oauthlib>=0.8.0
    google-auth-httplib2>=0.1.0
    google-api-python-client>=2.70.0
    msal>=1.20.0

[options.entry_points]
console_scripts =
    keeper = keepercommander.__main__:main